--- a/index.html
+++ b/index.html
@@ -3,41 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Screener Pro - Alpha</title>
+    <title>Screener Pro - Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body { background-color: #f4f6f9; }
-        .card { border: none; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">SCREENER PRO 📈</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 shadow-sm">
+        <div class="container">
+            <a class="navbar-brand fw-bold text-warning" href="#">SCREENER PRO <span class="badge bg-light text-dark ms-1">Alpha</span></a>
         </div>
     </nav>
 
     <div class="container">
-        <div id="status-alert" class="alert alert-info" role="alert">
-            Menghubungkan ke Supabase...
+        
+        <div id="status-alert" class="alert alert-secondary d-none" role="alert"></div>
+
+        <div class="row mb-4">
+            <div class="col-md-12">
+                <div class="card p-3">
+                    <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
+                        <h5 class="m-0">Manajemen Data</h5>
+                        <div class="d-flex gap-2">
+                            <input type="file" id="csv-file-input" accept=".csv" style="display: none;">
+                            <button class="btn btn-success" onclick="document.getElementById('csv-file-input').click()">
+                                📂 Upload CSV Saham
+                            </button>
+                            <button class="btn btn-primary" onclick="loadSaham()">
+                                🔄 Refresh Data
+                            </button>
+                        </div>
+                    </div>
+                    <small class="text-muted mt-2">Format CSV disarankan: Kode, Close, Volume (Header bebas, nanti otomatis dipetakan)</small>
+                </div>
+            </div>
         </div>
 
-        <div class="card">
-            <div class="card-header bg-white py-3 d-flex justify-content-between align-items-center">
-                <h5 class="m-0 fw-bold">Data Saham (Live Source)</h5>
-                <button class="btn btn-sm btn-outline-primary" onclick="loadSaham()">Refresh Data</button>
-            </div>
+        <div class="card shadow-sm">
             <div class="card-body p-0">
                 <div class="table-responsive">
-                    <table class="table table-striped table-hover mb-0" id="tabel-saham">
+                    <table class="table table-hover align-middle mb-0">
                         <thead class="table-light">
                             <tr>
                                 <th>Kode</th>
-                                <th>Close</th>
-                                <th>Chg (Selisih)</th>
-                                <th>Volume</th>
-                                <th>Tanggal</th>
+                                <th>Nama Perusahaan</th>
+                                <th class="text-end">Close</th>
+                                <th class="text-end">Chg</th>
+                                <th class="text-end">Volume</th>
+                                <th class="text-center">Tgl Data</th>
                             </tr>
                         </thead>
                         <tbody id="table-body">
@@ -45,10 +58,16 @@
                     </table>
                 </div>
             </div>
+            <div class="card-footer bg-white text-muted text-center" id="footer-info">
+                Menunggu data...
+            </div>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
