--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold text-warning" href="#">SCREENER PRO <span class="badge bg-light text-dark ms-1">Alpha</span></a>
+            
+            <button class="btn btn-outline-light btn-sm" id="btn-logout">
+                Logout
+            </button>
         </div>
     </nav>
-
     <div class="container">
         
         <div id="status-alert" class="alert alert-secondary d-none" role="alert"></div>
