--- a/index.html
+++ b/index.html
@@ -104,6 +104,34 @@
         </div>
     </div>
 
+    <div class="modal fade" id="portfolioModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-primary text-white">
+                    <h5 class="modal-title">💼 Atur Portofolio: <span id="modal-kode-saham" class="fw-bold"></span></h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="portfolio-form">
+                        <input type="hidden" id="input-kode">
+                        <div class="mb-3">
+                            <label class="form-label">Harga Beli Rata-rata (AVG)</label>
+                            <input type="number" id="input-avg" class="form-control" placeholder="Contoh: 4500" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Jumlah Lot</label>
+                            <input type="number" id="input-lots" class="form-control" value="1" required>
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary">💾 Simpan ke Portofolio</button>
+                            <button type="button" class="btn btn-outline-danger" id="btn-delete-portfolio">🗑️ Hapus dari Portofolio</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
