--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
                             <tr>
                                 <th>Kode</th>
                                 <th>Close</th>
-                                <th class="text-end">Chg %</th> <th class="text-center">Sinyal</th> <th class="text-center">Power</th>  <th class="text-end">Volume</th>
-                                <th>Aksi</th>
+                                <th class="text-end">Chg % / P/L</th> <th class="text-center">Sinyal</th>
+                                <th class="text-center">Power</th>
+                                <th class="text-end">Volume</th>
+                                <th class="text-center">Aksi</th>
                             </tr>
                         </thead>
                         <tbody id="table-body">
