--- a/index.html
+++ b/index.html
@@ -92,9 +92,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header bg-primary text-white">
-                    <h5 class="modal-title">💼 Atur Plan: <span id="modal-kode-saham" class="fw-bold"></span></h5>
+                    <div>
+                        <h5 class="modal-title fw-bold" id="modal-kode-saham">CODE</h5>
+                        <small id="modal-nama-perusahaan" class="text-white-50" style="font-size: 0.8rem;">Nama Perusahaan Tbk</small>
+                    </div>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
+
                 <div class="modal-body">
                     <form id="portfolio-form">
                         <input type="hidden" id="input-kode">
