--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
             <a class="navbar-brand fw-bold text-warning" href="#">
                 SCREENER PRO <span class="badge bg-light text-dark ms-1" style="font-size: 10px;">BETA</span>
             </a>
-            <div class="d-flex">
-                <button class="btn btn-outline-light btn-sm" id="btn-logout">Logout</button>
+              <div class="d-flex gap-2">
+                <button class="btn btn-outline-warning btn-sm" onclick="openStrategyModal()" title="Atur Strategi Default">
+                    ⚙️ Strategi
+                </button>
+                <button class="btn btn-outline-light btn-sm" id="btn-logout">
+                    Logout
+                </button>
             </div>
         </div>
     </nav>
