--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
             <a class="navbar-brand fw-bold text-warning" href="#">
                 SCREENER PRO <span class="badge bg-light text-dark ms-1" style="font-size: 10px;">BETA</span>
             </a>
-            <div class="d-flex">
-                <button class="btn btn-outline-light btn-sm" id="btn-logout">Logout</button>
+            <div class="d-flex gap-2">
+                <button class="btn btn-outline-warning btn-sm" onclick="openStrategyModal()" title="Atur Strategi Default">
+                    ⚙️ Strategi
+                </button>
+                <button class="btn btn-outline-light btn-sm" id="btn-logout">
+                    Logout
+                </button>
             </div>
         </div>
     </nav>
@@ -150,7 +155,30 @@
             </div>
         </div>
     </div>
-
+    <div class="modal fade" id="strategyModal" tabindex="-1">
+        <div class="modal-dialog modal-sm"> <div class="modal-content">
+                <div class="modal-header bg-dark text-white">
+                    <h5 class="modal-title fs-6">⚙️ Default Strategy</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="small text-muted mb-3">Nilai ini akan otomatis terisi saat Anda menambahkan saham baru.</p>
+                    <form id="strategy-form">
+                        <div class="mb-3">
+                            <label class="form-label small fw-bold">Default TP (%)</label>
+                            <input type="number" id="default-tp" class="form-control" placeholder="Contoh: 10">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label small fw-bold">Default CL (%)</label>
+                            <input type="number" id="default-cl" class="form-control" placeholder="Contoh: 5">
+                        </div>
+                        <button type="submit" class="btn btn-warning w-100 btn-sm">Simpan Settingan</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
