--- a/index.html
+++ b/index.html
@@ -41,7 +41,26 @@
     </nav>
 
     <div class="container">
-        
+        <div class="row g-3 mb-3" id="market-overview-area" style="display:none;">
+            <div class="col-md-4">
+                <div class="card shadow-sm h-100 border-success">
+                    <div class="card-header bg-success text-white py-1 fw-bold small">🚀 Top Gainers</div>
+                    <ul class="list-group list-group-flush small" id="list-gainers"></ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow-sm h-100 border-danger">
+                    <div class="card-header bg-danger text-white py-1 fw-bold small">🔻 Top Losers</div>
+                    <ul class="list-group list-group-flush small" id="list-losers"></ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow-sm h-100 border-primary">
+                    <div class="card-header bg-primary text-white py-1 fw-bold small">🔊 Top Volume</div>
+                    <ul class="list-group list-group-flush small" id="list-volume"></ul>
+                </div>
+            </div>
+        </div>
         <div id="status-alert" class="alert alert-secondary d-none" role="alert"></div>
 
         <div class="card shadow-sm mb-3">
