--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                     <table class="table table-hover align-middle mb-0 text-nowrap">
                         <thead class="table-light">
                             <tr>
-                                <th style="cursor:pointer; min-width: 130px;" onclick="sortTable(0)">Kode Saham ⇅</th>
-                                <th style="cursor:pointer; min-width: 100px;" onclick="sortTable(1)">Close ⇅</th>
-                                <th style="cursor:pointer; min-width: 100px;" class="text-end" onclick="sortTable(2)">Volume ⇅</th> 
-                                <th style="cursor:pointer; min-width: 120px;" class="text-end" onclick="sortTable(3)">Chg % / P/L ⇅</th>
-                                <th style="cursor:pointer; min-width: 120px;" class="text-center" onclick="sortTable(4)">Sinyal / Status ⇅</th>
+                                <th style="cursor:pointer; min-width: 100px;" onclick="sortTable(0)">Kode ⇅</th>
+                                <th style="cursor:pointer; min-width: 90px;" onclick="sortTable(1)">Close ⇅</th>
+                                <th style="cursor:pointer; min-width: 120px;" class="text-end" onclick="sortTable(2)">M.Cap / Asing ⇅</th> 
+                                <th style="cursor:pointer; min-width: 100px;" class="text-end" onclick="sortTable(3)">Chg% ⇅</th>
+                                <th style="cursor:pointer; min-width: 100px;" class="text-center" onclick="sortTable(4)">Sinyal ⇅</th>
                             </tr>
                         </thead>
                         <tbody id="table-body">
@@ -169,6 +169,99 @@
             </div>
         </div>
 
+    <div class="modal fade" id="portfolioModal" tabindex="-1">
+        <div class="modal-dialog modal-lg modal-fullscreen-md-down">
+            <div class="modal-content">
+                <div class="modal-header bg-primary text-white">
+                    <div>
+                        <h5 class="modal-title fw-bold" id="modal-kode-saham">CODE</h5>
+                        <small id="modal-nama-perusahaan" class="text-white-50" style="font-size: 0.8rem;">Nama Perusahaan</small>
+                    </div>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    
+                    <div id="chart-area" class="mb-2 border rounded p-1 bg-white" style="height: 300px;">
+                        <div id="price-chart" class="w-100 h-100 d-flex align-items-center justify-content-center text-muted">
+                            <small>Memuat Chart...</small>
+                        </div>
+                    </div>
+
+                    <div class="card bg-light border-0 mb-3">
+                        <div class="card-body p-2">
+                            <h6 class="fw-bold small text-muted mb-2">🤖 AI Technical Summary</h6>
+                            <div class="row g-2" style="font-size: 0.8rem;">
+                                <div class="col-6">
+                                    <span class="d-block text-secondary">Trend (MA20):</span>
+                                    <span id="tech-trend" class="fw-bold">-</span>
+                                </div>
+                                <div class="col-6">
+                                    <span class="d-block text-secondary">RSI (14):</span>
+                                    <span id="tech-rsi" class="fw-bold">-</span>
+                                </div>
+                                <div class="col-6">
+                                    <span class="d-block text-secondary">Support / Resistance:</span>
+                                    <span id="tech-sr" class="fw-bold">-</span>
+                                </div>
+                                <div class="col-6">
+                                    <span class="d-block text-secondary">MACD:</span>
+                                    <span id="tech-macd" class="fw-bold">-</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <form id="portfolio-form">
+                        <input type="hidden" id="input-kode">
+                        <div class="row mb-3">
+                            <div class="col-6">
+                                <label class="form-label small text-muted">Harga Avg (Buy)</label>
+                                <input type="number" id="input-avg" class="form-control fw-bold" placeholder="0" required>
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label small text-muted">Jumlah Lot</label>
+                                <input type="number" id="input-lots" class="form-control" value="1" required>
+                            </div>
+                        </div>
+                        <hr>
+                        <p class="mb-2 fw-bold text-primary small">🎯 TRADING PLAN (Satuan %)</p>
+                        <div class="row mb-3">
+                            <div class="col-6">
+                                <label class="form-label small text-muted">Target Profit (%)</label>
+                                <div class="input-group input-group-sm">
+                                    <span class="input-group-text bg-success text-white">+</span>
+                                    <input type="number" id="input-tp-pct" class="form-control border-success" placeholder="Misal: 10">
+                                    <span class="input-group-text">%</span>
+                                </div>
+                                <div class="form-text text-success small" id="calc-tp">Target: -</div>
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label small text-muted">Cut Loss (%)</label>
+                                <div class="input-group input-group-sm">
+                                    <span class="input-group-text bg-danger text-white">-</span>
+                                    <input type="number" id="input-cl-pct" class="form-control border-danger" placeholder="Misal: 5">
+                                    <span class="input-group-text">%</span>
+                                </div>
+                                <div class="form-text text-danger small" id="calc-cl">Stop: -</div>
+                            </div>
+                        </div>
+                         <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="input-watchlist">
+                            <label class="form-check-label small" for="input-watchlist">⭐ Masukkan ke Watchlist</label>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label small text-muted">Catatan / Alasan Beli</label>
+                            <textarea id="input-notes" class="form-control form-control-sm" rows="2" placeholder="Contoh: Akumulasi bandar, Breakout resistance..."></textarea>
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary">💾 Simpan Plan</button>
+                            <button type="button" class="btn btn-outline-danger btn-sm" id="btn-delete-portfolio" style="display:none;">🗑️ Hapus dari Portofolio</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     </div> 
 
     <div class="modal fade" id="portfolioModal" tabindex="-1">
