--- a/index.html
+++ b/index.html
@@ -137,24 +137,98 @@
         <div class="row g-3 mb-3" id="tech-recommendation-area" style="display:none;">
             <div class="col-md-4">
                 <div class="card shadow-sm h-100 border-dark">
-                    <div class="card-header bg-dark text-white py-1 fw-bold small">🏦 Big Market Cap</div>
+                    <div class="card-header bg-dark text-white py-1 fw-bold small d-flex justify-content-between align-items-center">
+                        <span>🏦 Big Market Cap</span>
+                        <span class="badge bg-secondary text-white border" style="font-size:0.7em">Top 20</span>
+                    </div>
                     <ul class="list-group list-group-flush small" id="list-mcap"></ul>
+                    <div class="card-footer p-1 text-center bg-white">
+                        <a href="#" class="text-decoration-none small fw-bold text-dark" onclick="toggleExpand('list-mcap-hidden', this)">Lihat Lainnya ⌄</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card shadow-sm h-100 border-info">
-                    <div class="card-header bg-info text-dark py-1 fw-bold small">💰 Foreign Accumulation</div>
+                    <div class="card-header bg-info text-dark py-1 fw-bold small d-flex justify-content-between align-items-center">
+                        <span>💰 Foreign Accumulation</span>
+                        <span class="badge bg-white text-info" style="font-size:0.7em">Top 20</span>
+                    </div>
                     <ul class="list-group list-group-flush small" id="list-foreign"></ul>
+                    <div class="card-footer p-1 text-center bg-white">
+                        <a href="#" class="text-decoration-none small fw-bold text-info" onclick="toggleExpand('list-foreign-hidden', this)">Lihat Lainnya ⌄</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card shadow-sm h-100 border-warning">
-                    <div class="card-header bg-warning text-dark py-1 fw-bold small">⚡ Top Frequency</div>
+                    <div class="card-header bg-warning text-dark py-1 fw-bold small d-flex justify-content-between align-items-center">
+                        <span>⚡ Top Frequency</span>
+                        <span class="badge bg-white text-dark" style="font-size:0.7em">Top 20</span>
+                    </div>
                     <ul class="list-group list-group-flush small" id="list-freq"></ul>
+                    <div class="card-footer p-1 text-center bg-white">
+                        <a href="#" class="text-decoration-none small fw-bold text-dark" onclick="toggleExpand('list-freq-hidden', this)">Lihat Lainnya ⌄</a>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <div class="modal fade" id="strategyModal" tabindex="-1">
+        <div class="modal-dialog"> <div class="modal-content">
+                <div class="modal-header bg-dark text-white">
+                    <h5 class="modal-title fs-6">⚙️ Konfigurasi Strategi</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="strategy-form">
+                        <div class="mb-3">
+                            <label class="form-label small fw-bold">Pilih Profil Trading:</label>
+                            <select id="strategy-preset" class="form-select" onchange="applyStrategyPreset()">
+                                <option value="custom">🛠️ Custom (Manual)</option>
+                                <option value="conservative">🐢 Konservatif (Swing/Invest)</option>
+                                <option value="moderate">⚖️ Moderat (Day Trade)</option>
+                                <option value="aggressive">🚀 Agresif (Scalping)</option>
+                            </select>
+                            <div class="form-text small fst-italic mt-1" id="strategy-desc">Deskripsi strategi...</div>
+                        </div>
+                        <hr>
+                        
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <h6 class="small fw-bold text-muted border-bottom pb-1">💰 Risk Management</h6>
+                                <div class="mb-2">
+                                    <label class="form-label small mb-0">Target Profit (%)</label>
+                                    <input type="number" id="default-tp" class="form-control form-control-sm" placeholder="0">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label small mb-0">Cut Loss (%)</label>
+                                    <input type="number" id="default-cl" class="form-control form-control-sm" placeholder="0">
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <h6 class="small fw-bold text-muted border-bottom pb-1">📈 Indikator Chart</h6>
+                                <div class="mb-2">
+                                    <label class="form-label small mb-0">MA Period (Garis Tren)</label>
+                                    <input type="number" id="default-ma" class="form-control form-control-sm" placeholder="Contoh: 20">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label small mb-0">RSI Period</label>
+                                    <input type="number" id="default-rsi" class="form-control form-control-sm" value="14" readonly>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="alert alert-info py-2 mt-3 mb-0 small">
+                            <i class="me-1">ℹ️</i> Angka ini akan digunakan untuk <b>Auto-fill Portofolio</b> dan <b>Setting Grafik</b>.
+                        </div>
+
+                        <button type="submit" class="btn btn-warning w-100 mt-3">Simpan Konfigurasi</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
         <div class="sticky-controls mb-3">
             <div class="card shadow-sm border-0">
                 <div class="card-body p-3 bg-white rounded">
